[package]
name = "msik"
version = "2.0.0"
edition = "2021"
authors = ["WillerAI <eksosbdib72@gmail.com>"]
description = "Formally verified security kernel for Model Context Protocol (MCP) traffic"
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }

[lib]
name = "msik"
path = "src/lib.rs"

[[bin]]
name = "msik"
path = "src/main.rs"
