[package]
name = "msik"
version = "2.0.0"
edition = "2024"
authors = ["WillerAI <eksosbdib72@gmail.com>"]
description = "High-performance formal verification kernel for MCP frames"

[lib]
name = "msik"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
